tools/clang/iterator_checker/tests/simple-std-search.txt
simple-std-search.cpp:16:4: error: [iterator-checker] Potentially invalid iterator used.
  *it;  // Invalid access.
   ^
1 error generated.
